--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <header class="l-header">
             <nav class="nav bd-grid">
                 <div>
-                    <a href="assets/img/AUMKAR.png" class="nav__logo">Aumkar Tushar Matwankar</a>
+                    <a href="AUMKAR.png" class="nav__logo">Aumkar Tushar Matwankar</a>
                 </div>
 
                 <div class="nav__menu" id="nav-menu">
