--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         </div>
 
  	<div class="certificate__item">
-            <img src="assets/img/MKCL.jpg" alt="Data Analytics Certificate" class="certificate__thumb" onclick="openFullImg(this.src)">
+            <img src="MKCL.jpg" alt="Data Analytics Certificate" class="certificate__thumb" onclick="openFullImg(this.src)">
 	<p class="certificate__desc"><b>MSCIT</b><br><i>MKCL- Maharashtra</i></p>
         </div>
 
