--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Aumkar </span><br> Tech Enthusiast</h1>
 
 		<a href="https://wa.me/919969306206?text=Hi%20Aumkar%2C%20I%20visited%20your%20portfolio%20and%20wanted%20to%20connect!" target="_blank" class="button">Contact</a>
-		    <a href="resume.pdf" download class="button" target="_blank" class="button">Download Resume</a>
+		    <a href="RESUM.pdf" download class="button" target="_blank" class="button">Download Resume</a>
 
                 </div>
 
